<resources>
    <string name="app_name">Time2DO</string>

    <string name="action_settings">Settings</string>
    <string name="delete_icon">Delete</string>
    <string name="edit_icon">Edit</string>
    <string name="Do_it_icon">Doit</string>
    <string name="upArrow">upArrow</string>
    <string name="to_do">To Do</string>
    <string name="task_priority">Task Priority:</string>
    <string name="low">Low</string>
    <string name="normal">Normal</string>
    <string name="high">High</string>
    <string name="checked_tasks">Checked tasks</string>

</resources>
