<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mkany.time2do.MainActivity"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:id="@+id/appBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorAccent"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="40dp"
                android:src="@drawable/fist"
                android:id="@+id/doIt"
                android:layout_marginStart="@dimen/small"
                android:contentDescription="@string/Do_it_icon"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Do_it_icon"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="italic|bold"
                android:duplicateParentState="true"
                android:layout_marginTop="5dp"
                android:layout_marginStart="@dimen/small"
                />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tasks_recycler_view"
            android:layoutAnimation="@anim/layout_animation_fall_down"
            android:background="@color/white">
        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5sp"
            android:background="@color/Bgrey"
            android:orientation="horizontal"
            android:layout_marginRight="50sp"
            android:layout_marginLeft="50sp"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="10sp"
            android:id="@+id/line"
            android:visibility="invisible">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:orientation="horizontal"
            android:id="@+id/checked_tasks"
            android:clickable="true"
            android:visibility="invisible">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat = "@drawable/ic_expand_more_black_24dp"
                android:background="@color/transparent"
                android:layout_marginStart="23dp"
                android:id="@+id/upArrow"
                android:clickable="true"
                android:contentDescription="@string/upArrow" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checked_tasks"
                android:textColor="@color/Bgrey"
                android:textSize="18sp"
                android:layout_marginStart="10sp"
                android:textStyle="italic"
                android:layout_marginTop="3sp"
                />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="23dp"
            android:id="@+id/done_recycler_view"
            android:background="@color/white">
        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/medium_margin"
        app:srcCompat ="@drawable/ic_plussymbol"
        app:rippleColor="@color/colorPrimaryDark"
        app:fabSize="normal" />


</android.support.design.widget.CoordinatorLayout>
